--- a/register/logged_out.html
+++ b/register/logged_out.html
@@ -1,6 +1,6 @@
 {% extends './base.html' %}
 
-{% block title %}{{ block.super }}Login{% endblock %}
+{% block title %}{{ block.super }}Logout{% endblock %}
 
 {% block content %}
     <h2>Login</h2>
